# idym

./: CMakeLists.txt  README.md
include/idym/: expected.hpp  functional.hpp  idym_defs.hpp  type_traits.hpp  utility.hpp  variant.hpp
tests/: expected.cpp  idym_test.hpp  variant.cpp
